# lightkraken2

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  app.cpp  app.h  artnet.cpp  artnet.h  build.sh  color.cpp  color.h  control.cpp  control.h  crc.cpp  crc.h  ddp.cpp  ddp.h  driver.cpp  driver.h  main.c  model.cpp  model.h  network.cpp  network.h  pwmtimer.cpp  pwmtimer.h  random.cpp  random.h  sacn.cpp  sacn.h  settingsdb.cpp  settingsdb.h  spi.cpp  spi.h  strip.cpp  strip.h  systick.cpp  systick.h  utils.h  (+2 more)
mkfat/: dirent.h  main.c
openocd/: stlink-dap.cfg  stm32h5x.cfg
support/: STM32H563xx_FLASH.ld  STM32H563xx_FLASH_BOOTLOADER.ld  cmsis_compiler.h  cmsis_gcc.h  cmsis_version.h  core_cm33.h  fal_cfg.h  fal_stm32h5xx.c  fdb_cfg.h  hal_sys_init.c  hal_sys_init.h  ipv6.c  ipv6.h  lan8742.c  lan8742.h  lwjson_opts.h  mpu_armv8.h  nx_port.h  nx_stm32_eth_driver.c  nx_stm32_eth_driver.h  nx_stm32_phy_driver.c  nx_stm32_phy_driver.h  sha256_digest_inject.py  stm32h563xx.h  stm32h5xx_hal_conf.h  stm32h5xx_hal_msp.c  stm32h5xx_hal_timebase_tim.c  stm32h5xx_it.h  syscalls.c  sysmem.c  system_stm32h5xx.c  system_stm32h5xx.h
